project(majority_element)
add_executable(${PROJECT_NAME} majority_element.cpp)


project(min_in_rotation_array)
add_executable(${PROJECT_NAME} min_in_rotation_array.cpp)

project(sort_array)
add_executable(${PROJECT_NAME} sort_array.cpp)


project(count_small_after_self)
add_executable( ${PROJECT_NAME} count_small_after_self.cpp)