project(add_two_nums)
add_executable(${PROJECT_NAME} add_two_nums.cpp)

project(add_two_nums_ii)
add_executable(${PROJECT_NAME} add_two_nums_ii.cpp)

project(swap_node_pair)
add_executable(${PROJECT_NAME}  swap_node_pair.cpp)

project(list_cycle)
add_executable(${PROJECT_NAME}  list_cycle.cpp)

project(list_cycle_ii)
add_executable(${PROJECT_NAME}  list_cycle_ii.cpp)

project(merge_two_lists)
add_executable(${PROJECT_NAME}  merge_two_lists.cpp)

project(merge_k_lists)
add_executable(${PROJECT_NAME}  merge_k_lists.cpp)

project(insert_sort_list)
add_executable(${PROJECT_NAME} insert_sort_list.cpp)
