project(inorder_traversal)
add_executable(${PROJECT_NAME} inorder_traversal.cpp)

project(preorder_traversal)
add_executable(${PROJECT_NAME} preorder_traversal.cpp)

project(postorder_traversal)
add_executable(${PROJECT_NAME} postorder_traversal.cpp)



project(N_ary_tree_lever_traversal)
add_executable(${PROJECT_NAME} N_ary_tree_level_traversal.cpp)

project(N_ary_preorder)
add_executable(${PROJECT_NAME} N_ary_preorder.cpp)

project(N_ary_postorder)
add_executable(${PROJECT_NAME} N_ary_postorder.cpp)

project(vertical_order)
add_executable(${PROJECT_NAME} vertical_order.cpp)